...
    <string name="section_current_expiry">"Current expiry"</string>
    <string name="section_new_expiry">"New expiry"</string>

    <!-- button -->
    <string name="btn_encrypt_share_file">"Encrypt and share file"</string>
    <string name="btn_encrypt_save_file">"Encrypt and save file"</string>
    <string name="btn_save">"Save"</string>
    <string name="btn_view_log">"View log"</string>
    <string name="btn_do_not_save">"Cancel"</string>
    <string name="btn_delete">"Delete"</string>
    <string name="btn_no_date">"No Expiry"</string>
    <string name="btn_okay">"Okay"</string>
    <string name="btn_export_to_server">"Upload To Keyserver"</string>
...
    <string name="btn_copy_decrypted_text">"Copy to clipboard"</string>
    <string name="btn_decrypt_clipboard">"Read from clipboard"</string>
    <string name="btn_decrypt_files">"Select input file"</string>
    <string name="btn_encrypt_files">"Encrypt files"</string>
    <string name="btn_encrypt_text">"Encrypt text"</string>
    <string name="btn_add_email">"Add additional email address"</string>
    <string name="btn_unlock">"Unlock"</string>
    <string name="btn_proceed">"Proceed"</string>
    <string name="btn_save_default">"Save as default"</string>
    <string name="btn_saved">"Saved!"</string>
    <string name="btn_not_matching">"Not matching"</string>

    <!-- Shortcut Strings -->
...
    <string name="btn_import_keys">"Import all keys"</string>
    <string name="btn_view_list">"View list"</string>
    <string name="btn_refresh">"Refresh"</string>
    <string name="btn_go_to_key">"Go to key"</string>

    <!-- Generic result toast -->
    <string name="snackbar_details">"Details"</string>
    <string name="with_warnings">", with warnings"</string>
    <string name="with_cancelled">", until cancelled"</string>

    <!-- Import result toast -->
    <plurals name="import_keys_added_and_updated_1">
        <item quantity="one">"Successfully imported one key"</item>
...
    <string name="msg_mf_error_master_none">"No primary certificate found to operate on! (All revoked?)"</string>
    <string name="msg_mf_error_noexist_primary">"Bad primary user ID specified!"</string>
    <string name="msg_mf_error_noexist_revoke">"Bad user ID for revocation specified!"</string>
    <string name="msg_mf_error_restricted">"Tried to execute restricted operation without password! This is a programming error, please file a bug report!"</string>
    <string name="msg_mf_error_revoked_primary">"Revoked user IDs cannot be primary!"</string>
    <string name="msg_mf_error_null_expiry">"Expiry time cannot be "same as before" on subkey creation. This is a programming error, please file a bug report!"</string>
    <string name="msg_mf_error_noop">"Nothing to do!"</string>
    <string name="msg_mf_error_passphrase_master">"Fatal error decrypting primary key! This is likely a programming error, please file a bug report!"</string>
    <string name="msg_mf_error_passphrases_unchanged">"No password changed!"</string>
    <string name="msg_mf_error_pgp">"Internal OpenPGP error!"</string>
    <string name="msg_mf_error_sig">"Signature exception!"</string>
    <string name="msg_mf_error_sub_stripped">"Cannot modify stripped subkey %s!"</string>
    <string name="msg_mf_error_subkey_missing">"Tried to operate on missing subkey %s!"</string>
...
    <string name="msg_dc_clear_meta_mime">"MIME type: %s"</string>
    <string name="msg_dc_clear_meta_size">"File size: %s"</string>
    <string name="msg_dc_clear_meta_size_unknown">"File size: Unknown"</string>
    <string name="msg_dc_clear_meta_time">"Modification time: %s"</string>
    <string name="msg_dc_clear_signature_bad">"Signature check NOT OK!"</string>
    <string name="msg_dc_clear_signature_check">"Verifying signature data"</string>
    <string name="msg_dc_clear_signature_ok">"Signature check OK"</string>
    <string name="msg_dc_clear_signature">"Saving signature data for later"</string>
    <string name="msg_dc_clear">"Processing cleartext data"</string>
    <string name="msg_dc_error_bad_passphrase">"Error unlocking key, bad password!"</string>
    <string name="msg_dc_error_sym_passphrase">"Error decrypting data! (Bad password?)"</string>
    <string name="msg_dc_error_corrupt_data">"Data is corrupt!"</string>
    <string name="msg_dc_error_extract_key">"Unknown error unlocking key!"</string>
...
    <string name="msg_se_input_bytes">"Processing input from byte array"</string>
    <string name="msg_se_input_uri">"Processing input from URI"</string>
    <string name="msg_se_error_no_input">"No input given!"</string>
    <string name="msg_se_error_input_uri_not_found">"Error opening URI for reading!"</string>
    <string name="msg_se_error_output_uri_not_found">"Error opening URI for writing!"</string>
    <string name="msg_se_error_too_many_inputs">"More inputs than outputs specified! This is probably a programming error, please report!"</string>
    <string name="msg_se_success">"Sign/encrypt operation successful"</string>

    <!-- Messages for PgpSignEncrypt operation -->
    <string name="msg_pse_asymmetric">"Preparing public keys for encryption"</string>
    <string name="msg_pse_compressing">"Preparing compression"</string>
    <string name="msg_pse_encrypting">"Encrypting data"</string>
    <string name="msg_pse_error_bad_passphrase">"Bad password!"</string>
...
    <string name="unknown">"unknown"</string>
    <string name="error_no_encrypt_subkey">"No encryption subkey available!"</string>
    <string name="error_no_file_selected">"Select at least one file to encrypt!"</string>
    <string name="error_multi_files">"Saving of multiple files not supported. This is a limitation on current Android."</string>
    <string name="error_multi_clipboard">"Encryption of multiple files to clipboard not supported."</string>
    <string name="error_detached_signature">"Sign-only operation of binary files is not supported, select at least one encryption key."</string>
    <string name="error_empty_text">"Type some text to encrypt!"</string>
    <string name="error_log_share_internal">"Internal error while preparing log!"</string>

    <!-- Android Account -->

    <!-- Passphrase wizard -->
    <!-- TODO: rename all the things! -->
...
    <string name="snack_self_encrypt_on">"Encrypt to signer <b>enabled</b>."</string>
    <string name="snack_self_encrypt_off">"Encrypt to signer <b>disabled</b>."</string>
    <string name="error_empty_log">"(error, empty log)"</string>
    <string name="error_reading_text">"Could not read input to decrypt!"</string>
    <string name="error_reading_aosp">"Failed reading data, this is a bug in the Android E-Mail client! (Issue #290)"</string>
    <string name="error_reading_k9">"Received incomplete data, try touching 'Download complete message' in K-9 Mail!"</string>
    <string name="filename_unknown">Unknown filename (touch to open)</string>
    <string name="filename_unknown_text">Text (touch to show)</string>
    <string name="filename_keys">"Key Backup (touch to import)"</string>
    <string name="intent_show">Show Signed/Encrypted Content</string>
    <string name="intent_share">Share Signed/Encrypted Content</string>
    <string name="view_internal">"View in OpenKeychain"</string>
    <string name="error_preparing_data">"Error preparing data!"</string>
    <string name="label_clip_title">"Encrypted Data"</string>
...
