...
        android:layout_marginLeft="16dp"
        android:background="?android:attr/editTextBackground">

        <ViewAnimator
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/result_encryption_icon"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:inAnimation="@anim/fade_in"
            android:outAnimation="@anim/fade_out"
            >
...
                android:layout_height="wrap_content"
                android:src="@drawable/status_lock_closed_24dp" />

        </ViewAnimator>

        <com.pchmn.materialchips.ChipsInput
            android:id="@+id/recipient_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            app:hint="@string/label_to"
...
        android:padding="0dp"
        android:background="?android:attr/editTextBackground">

        <ViewAnimator
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/result_signature_icon"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:inAnimation="@anim/fade_in"
            android:outAnimation="@anim/fade_out">

...
