...
        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/encrypt_text"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawablePadding="8dp"
            android:drawableRight="@drawable/ic_comment_text_grey600_24dp"
...
        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:id="@+id/decrypt_from_clipboard"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:clickable="true"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">
...
