...
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:padding="4dp"
        android:text="@string/label_passphrase" />

    <EditText
        android:id="@+id/passphrase_passphrase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:padding="4dp" />

...
