<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar_include"
        layout="@layout/toolbar_standalone" />

    <fragment
        android:id="@+id/list"
        android:layout_below="@id/toolbar_include"
        android:name="org.sufficientlysecure.keychain.ui.LogDisplayFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</RelativeLayout>