...
        tools:visibility="visible"
        style="?android:buttonBarStyle">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:id="@+id/view_key_card_user_ids_edit"
            android:text="Forget"
            android:textColor="@color/card_view_button"
            style="?android:attr/buttonBarButtonStyle"
            />

    </LinearLayout>
...
